# snns

./: .gitignore  Makefile  Makefile.def  Readme  Readme.DAN  Readme.bugs  Readme.dec  Readme.install  Readme.license  Readme.linux  Readme.openwin  config.h  configure  help.hdoc  make.txt.dan  make.txt.dan2
configuration/: Makefile.din  acconfig.h  config.h.bot  config.hin  config.sub  configure.in
debian/: README.Debian  changelog  control  copyright  libsnns-dev.dirs  libsnns-dev.install  libsnns.docs  libsnns.lintian-overrides  libsnns.postinst  libsnns.postrm  rules  source.lintian-overrides
debian/patches/: deb_cflags  format_security  lib_only  series  shared_libs
examples/: README.all  art1_letters.README  art1_letters.cfg  art1_letters.net  art1_letters3D.cfg  art2_tetra.README  art2_tetra.cfg  art2_tetra_high.pat  artmap.README  artmap.cfg  artmap.net  bdg_TDNN.README  bdg_TDNN.cfg  bdg_TDNN.chk  bdg_TDNN.net  bdg_TDNN.pat  bdg_variable.pat  default.cfg  dlvq_ziff.README  dlvq_ziff.cfg  dlvq_ziff.chk  dlvq_ziff.net  dlvq_ziff_100.pat  dlvq_ziff_trained.net  dlvq_ziff_untrained.net  eight_160.pat  eight_elman.README  eight_elman.cfg  eight_elman.chk  eight_elman_untrained.net  eight_jordan.README  eight_jordan.cfg  eight_jordan.chk  eight_jordan_untrained.net  encoder.README  encoder.cfg  encoder.chk  encoder.net  encoder.pat  font.README  (+56 more)
kernel/sources/: Makefile  calc_err.c  kernel.ddt  kernel.h  kr_pat_scan.c  kr_ui.h  lrand48.c  make_tbl.c
man/: Makefile
man/man1/: analyze.1  batchman.1  ff_bignet.1  isnns.1  linknets.1  snns.1  snns2c.1  td_bignet.1  xgui.1
python/: ChangeLog  Makefile  README  setup.py
python/examples/: README  customtest.py  encodertest.py  general.py  pyencoder.net  pyencoder.pat  som_cube_winners.py
python/snns/: krui.c  util.py
python3/: README  error.txt  setup.py3
python3/examples/: README  art1_letters.pat  art2_tetra.net  art2_tetra.pat  art2_tetra_low.pat  art2_tetra_med.pat  artmap_test.pat  artmap_train.pat  bdg_TDNN_untrained.net  customtest.py  eight_016.pat  eight_elman.net  eight_jordan.net  encoder_untrained.net  encodertest.py  font.pat  font_untrained.net  foo.net  foo.pat  foo.res  general.py  general.py.bak  laser.net  laser_1000.pat  laser_999.pat  laser_untrained.net  letseq_elman.net  letseq_h_elm.net  letters.net  letters.pat  letters3D.net  letters_untrained.net  nettalk.pat  patmat.pat  pyencoder.net  pyencoder.pat  som_cube.net  som_cube_winners.py  som_cube_winners.py.bak  spirals.pat  (+11 more)
python3/snns/: __init__.py  error.txt  krui.c
tools/doc/: analyze.doc  bignet.doc  convert2snns.doc  feedback-gennet.doc  m_art.doc  mkhead.doc  mkout.doc  mkpat.doc  netlearn.doc  netperf.doc  pat_sel.doc  snnsbat.doc
tools/sources/: .snnsbat.c.swp  Makefile  README  analyze  analyze.c  arglist.c  arglist.h  arglist.ph  backpatch.c  backpatch.h  backpatch.ph  batchman  batchman.c  batchman.h  batchman.ph  convert2snns  convert2snns.c  error.c  error.h  error.ph  feedback-gennet  feedback-gennet.c  ff_bignet  ff_bignet.c  ff_bignet.ph  functions.h  gram1.tab.c  gram1.tab.h  gram1.y  ic_snns.c  ic_snns.h  ic_snns.ph  icopjmp.c  icopjmp.h  icopjmp.ph  ictab.c  ictab.h  ictab.ph  isnns  isnns.c  (+47 more)
xgui/iconsXgui/: MASPARsnns.fig  MASPARsnns.xbm  act.xbm  activation.xbm  add.xbm  all.xbm  analyser.xbm  append.xbm  art1.xbm  art2.xbm  artmap.xbm  assoz.xbm  ave.xbm  background.xbm  bias.xbm  big.xbm  bignet.xbm  bottlabel.xbm  cancel.xbm  cancel2.xbm  cascade.xbm  central.xbm  cfg.xbm  choose.xbm  circle.xbm  classesP.xbm  clear.xbm  close.xbm  color.xbm  color2.xbm  colors.xbm  connect.xbm  control.xbm  controlP.xbm  cooperativ.xbm  create.xbm  create_net.xbm  create_td_net.xbm  cselect.xbm  dctrl.xbm  (+167 more)
xgui/sources/: Makefile  README  bn_JordElm.c  bn_JordElm.h  bn_JordElm.ph  bn_TD_bignet.c  bn_TD_bignet.h  bn_TD_bignet.ph  bn_art1.c  bn_art1.h  bn_art1.ph  bn_art2.c  bn_art2.h  bn_art2.ph  bn_artmap.c  bn_artmap.h  bn_artmap.ph  bn_assoz.c  bn_assoz.h  bn_assoz.ph  bn_basics.c  bn_basics.h  bn_basics.ph  bn_bighop.c  bn_bighop.h  bn_bighop.ph  bn_bignet.c  bn_bignet.h  bn_bignet.ph  bn_kohonen.c  bn_kohonen.h  bn_kohonen.ph  cc_main.c  cc_main.h  cc_main.ph  d3_anageo.c  d3_anageo.h  d3_anageo.ph  d3_disp.c  d3_disp.h  (+193 more)
